@@ -1726,6 +1726,7 @@ ____CORE_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_metafile.obj \
 	$(OBJS)\monodll_msgdlg.obj \
 	$(OBJS)\monodll_nativdlg.obj \
+	$(OBJS)\monodll_nativewin.obj \
 	$(OBJS)\monodll_notebook.obj \
 	$(OBJS)\monodll_access.obj \
 	$(OBJS)\monodll_ownerdrw.obj \
@@ -2375,6 +2376,7 @@ ____CORE_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_metafile.obj \
 	$(OBJS)\monolib_msgdlg.obj \
 	$(OBJS)\monolib_nativdlg.obj \
+	$(OBJS)\monolib_nativewin.obj \
 	$(OBJS)\monolib_notebook.obj \
 	$(OBJS)\monolib_access.obj \
 	$(OBJS)\monolib_ownerdrw.obj \
@@ -2963,6 +2965,7 @@ ____CORE_SRC_FILENAMES_2_OBJECTS =  \
 	$(OBJS)\coredll_metafile.obj \
 	$(OBJS)\coredll_msgdlg.obj \
 	$(OBJS)\coredll_nativdlg.obj \
+	$(OBJS)\coredll_nativewin.obj \
 	$(OBJS)\coredll_notebook.obj \
 	$(OBJS)\coredll_access.obj \
 	$(OBJS)\coredll_ownerdrw.obj \
@@ -3433,6 +3436,7 @@ ____CORE_SRC_FILENAMES_3_OBJECTS =  \
 	$(OBJS)\corelib_metafile.obj \
 	$(OBJS)\corelib_msgdlg.obj \
 	$(OBJS)\corelib_nativdlg.obj \
+	$(OBJS)\corelib_nativewin.obj \
 	$(OBJS)\corelib_notebook.obj \
 	$(OBJS)\corelib_access.obj \
 	$(OBJS)\corelib_ownerdrw.obj \
@@ -5891,6 +5895,9 @@ $(OBJS)\monodll_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 $(OBJS)\monodll_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
 
+$(OBJS)\monodll_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\nativewin.cpp
+
 $(OBJS)\monodll_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\ole\access.cpp
 
@@ -7996,6 +8003,9 @@ $(OBJS)\monolib_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 
 $(OBJS)\monolib_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
+
+$(OBJS)\monolib_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\nativewin.cpp
 
 $(OBJS)\monolib_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\ole\access.cpp
@@ -10487,6 +10497,9 @@ $(OBJS)\coredll_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 $(OBJS)\coredll_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
 
+$(OBJS)\coredll_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\nativewin.cpp
+
 $(OBJS)\coredll_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\ole\access.cpp
 
@@ -11797,6 +11810,9 @@ $(OBJS)\corelib_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 
 $(OBJS)\corelib_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
+
+$(OBJS)\corelib_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\nativewin.cpp
 
 $(OBJS)\corelib_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\ole\access.cpp
